--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "version": "0.1.0",
   "description": "Atelier React.js",
   "main": "app.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "jsx"
+    ]
+  },
   "dependencies": {
     "bootstrap": "^3.3.4",
     "connect-livereload": "^0.5.3",
@@ -10,13 +24,16 @@
     "express": "^4.12.3",
     "flux": "^2.0.1",
     "node-jsx": "^0.12.4",
-    "react": "^0.13.1"
+    "react": "^0.13.1",
+    "superagent": "^1.1.0"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-express": "^0.3.4",
     "gulp-webpack": "^1.3.0",
     "jest": "^0.1.39",
-    "jsx-loader": "^0.12.2"
+    "jest-cli": "^0.4.0",
+    "jsx-loader": "^0.12.2",
+    "react-tools": "^0.13.1"
   }
 }
