--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "version": "0.1.0",
   "description": "Atelier React.js",
   "main": "app.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/preprocessor.js",
+    "unmockedModulePathPatterns": ["<rootDir>/node_modules/react"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "jsx"
+    ]
+  },
   "dependencies": {
     "bootstrap": "^3.3.4",
     "connect-livereload": "^0.5.3",
@@ -17,6 +29,8 @@
     "gulp-express": "^0.3.4",
     "gulp-webpack": "^1.3.0",
     "jest": "^0.1.39",
-    "jsx-loader": "^0.12.2"
+    "jest-cli": "^0.4.0",
+    "jsx-loader": "^0.12.2",
+    "react-tools": "^0.13.1"
   }
 }
