--- a/package.json
+++ b/package.json
@@ -3,20 +3,33 @@
   "version": "0.1.0",
   "description": "Atelier React.js",
   "main": "app.js",
+  "scripts": {
+    "test": "gulp test"
+  },
   "dependencies": {
     "bootstrap": "^3.3.4",
-    "connect-livereload": "^0.5.3",
-    "ejs": "^2.3.1",
     "express": "^4.12.3",
     "flux": "^2.0.1",
-    "node-jsx": "^0.12.4",
-    "react": "^0.13.1"
+    "react": "^0.13.1",
+    "superagent": "^1.1.0"
   },
   "devDependencies": {
+    "babel-core": "^5.0.6",
+    "babel-eslint": "^2.0.2",
+    "babel-jest": "^5.0.1",
+    "babel-loader": "^5.0.0",
+    "browser-sync": "^2.5.2",
+    "eslint": "^0.19.0",
+    "eslint-loader": "^0.10.0",
+    "eslint-plugin-react": "^2.1.0",
     "gulp": "^3.8.11",
-    "gulp-express": "^0.3.4",
+    "gulp-jest": "^0.4.0",
+    "gulp-util": "^3.0.4",
     "gulp-webpack": "^1.3.0",
+    "harmonize": "^1.4.1",
     "jest": "^0.1.39",
-    "jsx-loader": "^0.12.2"
+    "jest-cli": "^0.4.0",
+    "react-tools": "^0.13.1",
+    "http-proxy": "^1.10.1"
   }
 }
