--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^3.3.4",
     "express": "^4.12.3",
     "flux": "^2.0.1",
+    "http-proxy": "^1.10.1",
     "react": "^0.13.1",
     "superagent": "^1.1.0"
   },
@@ -34,7 +35,6 @@
     "karma-webpack": "^1.5.0",
     "react-tools": "^0.13.1",
     "rewire": "^2.3.1",
-    "rewire-webpack": "^1.0.0",
-    "http-proxy": "^1.10.1"
+    "rewire-webpack": "^1.0.0"
   }
 }
