--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "flux": "^2.0.1",
+    "http-proxy": "^1.10.1",
     "node-jsx": "^0.12.4",
     "react": "^0.13.1",
     "superagent": "^1.1.0"
