--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flux": "^2.0.1",
     "http-proxy": "^1.10.1",
     "react": "^0.13.1",
+    "reflux": "^0.2.7",
     "superagent": "^1.1.0"
   },
   "devDependencies": {
