--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http-proxy": "^1.10.1",
     "node-jsx": "^0.12.4",
     "react": "^0.13.1",
+    "reflux": "^0.2.7",
     "superagent": "^1.1.0"
   },
   "devDependencies": {
