--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "http-proxy": "^1.10.1",
     "node-jsx": "^0.12.4",
     "react": "^0.13.1",
+    "react-router": "^0.13.2",
     "reflux": "^0.2.7",
+    "sprintf-js": "^1.0.2",
     "superagent": "^1.1.0"
   },
   "devDependencies": {
