--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "parser": "babel-eslint",
   "rules": {
     "global-strict": false,
+    "strict": false,
     "quotes": "single",
     "no-console": false
   },
