--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     ]
   },
   "dependencies": {
+    "babel-runtime": "^5.0.12",
     "bootstrap": "^3.3.4",
+    "co": "^4.5.1",
     "flux": "^2.0.1",
     "http-proxy": "^1.10.1",
-    "lodash": "^3.6.0",
     "node-jsx": "^0.12.4",
+    "lodash": "^3.6.0",
+    "promise": "^7.0.0",
     "react": "^0.13.1",
     "react-router": "^0.13.2",
     "reflux": "^0.2.7",
     "sprintf-js": "^1.0.2",
-    "superagent": "^1.1.0"
+    "superagent": "^1.1.0",
+    "superagent-promise": "^0.2.0"
   },
   "devDependencies": {
     "babel-core": "^5.0.6",
