--- a/package.json
+++ b/package.json
@@ -36,14 +36,18 @@
   "devDependencies": {
     "babel-core": "^5.0.6",
     "babel-eslint": "^2.0.2",
+    "babel-jest": "^5.0.1",
     "babel-loader": "^5.0.0",
     "browser-sync": "^2.5.2",
-    "eslint": "^0.18.0",
-    "eslint-loader": "^0.9.0",
+    "eslint": "^0.19.0",
+    "eslint-loader": "^0.10.0",
+    "eslint-plugin-react": "^2.1.0",
     "gulp": "^3.8.11",
+    "gulp-jest": "^0.4.0",
     "gulp-load-plugins": "^0.9.0",
     "gulp-util": "^3.0.4",
     "gulp-webpack": "^1.3.0",
+    "harmonize": "^1.4.1",
     "jest": "^0.1.39",
     "jest-cli": "^0.4.0",
     "react-tools": "^0.13.1",
